--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,6 @@
 /theme_dump.txt
 /theme_dump
 /.vscode
-/profiler.raddbg_profile
-/profiler.raddbg_user
+/framed.raddbg_profile
+/framed.raddbg_user
 /script/start_raddbg.bat
