--- a/ports/rust/Cargo.toml
+++ b/ports/rust/Cargo.toml
@@ -3,6 +3,9 @@ name = "framed-rs"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "framed"
+path = "src/lib.rs"
 
-[dependencies]
+[build-dependencies]
+cc = "1.0.88"
