--- a/ports/rust/framed_macro/Cargo.toml
+++ b/ports/rust/framed_macro/Cargo.toml
@@ -5,7 +5,9 @@ edition = "2021"
 
 [lib]
 proc-macro = true
-name = "framed_macros"
+name = "framed_macro"
 path = "./src/lib.rs"
 
 [dependencies]
+quote = "1.0.35"
+syn = { version = "2.0.52", features = ["extra-traits", "full"] }
