--- a/ports/rust/Cargo.toml
+++ b/ports/rust/Cargo.toml
@@ -1,4 +1,5 @@
 workspace = { members = ["framed_macro"] }
+
 [package]
 name = "framed-rs"
 version = "0.1.0"
@@ -10,6 +11,9 @@ path = "src/lib.rs"
 
 [build-dependencies]
 cc = "1.0.88"
+
+[dependencies]
+framed-rs-macros = { path = "./framed_macro" }
 
 [[bin]]
 name = "simple_init_and_send"
